apps/apps/homepage/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homepage.kube.hexie.dev`)
      kind: Rule
      services:
        - name: homepage
          port: 3000
  tls:
    certResolver: cloudflare
